--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,10 @@
 site_name: OpenFlight Knowledgebase
-repo_url: https://github.com/openflighthpc/openflight-docs
+repo_url: https://github.com/openflighthpc/mkdocs-test
 theme: material
 
 extra:
   version:
     provider: mike
-    default: stable
+    default:
+      - latest
+      - staging
