--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,3 +45,5 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
+  - toc:
+      title: On this page
