--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,12 +10,13 @@ nav:
       - flight-solo/cluster-build-methods/index.md
       - Example Cluster: flight-solo/cluster-build-methods/example-cluster.md
       - Choose Your Own Adventure: flight-solo/cluster-build-methods/modular.md
+      - All Methods:
+        - SLURM Standalone AWS: flight-solo/cluster-build-methods/slurm-standalone-aws.md
 theme:
   name: material
   logo: assets/images/logo.png
   features:
     - navigation.sections
-    - navigation.expand
     - navigation.indexes # Allows adding overview pages to sections, name them index.md
     - navigation.tabs
   palette:
