--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,8 @@ nav:
       - Choose Your Own Adventure: flight-solo/cluster-build-methods/modular.md
       - All Methods:
         - SLURM Standalone AWS: flight-solo/cluster-build-methods/slurm-standalone-aws.md
+  - HPC Workflows:
+    - hpc-workflows/index.md
 theme:
   name: material
   logo: assets/images/logo.png
