--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,6 @@
 site_name: OpenFlightHPC
 repo_url: https://github.com/openflighthpc/docs.openflighthpc.org
 nav:
-  - Home: index.md
   - Documentation:
     - docs/index.md
     - Overview:
@@ -153,7 +152,7 @@ nav:
         - Tensorflow: hpc-workflows/tensorflow.md
 theme:
   name: material
-  custom_dir: overrides
+  custom_dir: custom_theme/
   logo: assets/images/logo.png
   features:
     - content.code.annotate
