--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 site_name: OpenFlightHPC
 repo_url: https://github.com/openflighthpc/docs.openflighthpc.org
 nav:
@@ -165,19 +164,19 @@ theme:
     - navigation.top
   palette:
     # Palette toggle for automatic mode
-    - media: "(prefers-color-scheme)"
+    - scheme: alces
       toggle:
         icon: material/brightness-auto
         name: Switch to light mode
+
     # Palette toggle for light mode
-    - media: "(prefers-color-scheme: light)"
-      scheme: default 
+    - scheme: alces
       toggle:
         icon: material/brightness-7
         name: Switch to dark mode
+
     # Palette toggle for dark mode
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
+    - scheme: alces
       toggle:
         icon: material/brightness-4
         name: Switch to system preference
@@ -186,6 +185,7 @@ extra:
     provider: mike
     default: latest
 plugins:
+  - search
   - macros:
       include_dir: partials
   - search
