--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,25 @@ nav:
     - Where Can I Get Help: overview/get-help.md
   - HPC Environment Basics:
     - hpc-environment-basics/index.md
+    - Linux Environment Usage:
+      - hpc-environment-basics/linux-usage/index.md
+      - CLI Basics:
+        - hpc-environment-basics/linux-usage/cli-basics/index.md
+        - Logging In: hpc-environment-basics/linux-usage/cli-basics/logging-in.md
+        - Understanding the CLI: hpc-environment-basics/linux-usage/cli-basics/understanding-the-cli.md
+        - Moving Between Hosts: hpc-environment-basics/linux-usage/cli-basics/moving-between-hosts.md
+        - Becoming the Root User: hpc-environment-basics/linux-usage/cli-basics/becoming-root.md
+      - Working with Data and Files: 
+        - hpc-environment-basics/linux-usage/working-with-data/index.md
+        - Storage Types: hpc-environment-basics/linux-usage/working-with-data/storage-types.md
+        - Your Home Directory: hpc-environment-basics/linux-usage/working-with-data/your-home-directory.md
+        - Copying Data Between Hosts: hpc-environment-basics/linux-usage/working-with-data/copy-between-hosts.md
+        - Copying Data to a HPC Environment:
+          - hpc-environment-basics/linux-usage/working-with-data/copying-data/index.md
+          - Using CLI: hpc-environment-basics/linux-usage/working-with-data/copying-data/using-cli.md
+          - Using Graphical Client: hpc-environment-basics/linux-usage/working-with-data/copying-data/using-graphical-client.md
+          - Object Storage for Archiving Data: hpc-environment-basics/linux-usage/working-with-data/copying-data/object-storage-archiving-data.md
+      - Genders and PDSH: hpc-environment-basics/linux-usage/genders-pdsh.md
   - Flight Environment:
     - flight-environment/index.md
   - Flight Solo:
@@ -23,6 +42,7 @@ theme:
   name: material
   logo: assets/images/logo.png
   features:
+    - content.code.annotate
     - navigation.sections
     - navigation.indexes # Allows adding overview pages to sections, name them index.md
     - navigation.tabs
@@ -60,6 +80,7 @@ markdown_extensions:
   - md_in_html
   - admonition
   - pymdownx.details
+  - pymdownx.keys
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true 
