--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -154,7 +154,7 @@ nav:
 theme:
   name: material
   custom_dir: custom_theme/
-  logo: assets/images/logo.png
+  logo: assets/images/openflighthpc_logo.png
   features:
     - content.code.annotate
     - navigation.sections
