--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -228,6 +228,9 @@ markdown_extensions:
       custom_checkbox: true
   - toc:
       title: On this page
-extra_css: [extra.css]
+extra_css: 
+  - https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css
+  - extra.css
 extra_javascript:
+  - https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js
   - javascripts/extra.js
