--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -119,6 +119,7 @@ nav:
       - Workflows: 
         - flight-solo/cluster-build-methods/workflows/index.md
         - Kubernetes on AWS with Auto-Applying: flight-solo/cluster-build-methods/workflows/kubernetes-aws-auto-apply.md
+        - SLURM Standalone on OpenStack with Auto-Configure: flight-solo/cluster-build-methods/workflows/slurm-openstack-autoconfig.md
       - General Methods:
         - SLURM Standalone AWS: flight-solo/cluster-build-methods/slurm-standalone-aws.md
         - SLURM Standalone Azure: flight-solo/cluster-build-methods/slurm-standalone-azure.md
