--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -229,6 +229,6 @@ markdown_extensions:
   - toc:
       title: On this page
 extra_css: 
-  - extra.css
+  - stylesheets/extra.css
 extra_javascript:
   - javascripts/extra.js
