Use symspellpy instead of just codespell

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -190,6 +190,7 @@ plugins:
       minify_css: true
   - spellcheck:
       backends:
+        - symspellpy
         - codespell:  # or nested configs
             dictionaries: [clear, rare, informal, usage, code, names]
       known_words: codespell/known_words.txt
