--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,6 +151,7 @@ theme:
   name: material
   custom_dir: custom_theme/
   logo: assets/images/openflighthpc_white.svg
+  favicon: assets/images/bumcloud.svg
   features:
     - content.code.annotate
     - navigation.sections
