--- a/partials/warehouse/templates/slurm-team-edition.yml
+++ b/partials/warehouse/templates/slurm-team-edition.yml
@@ -106,16 +106,6 @@ resources:
           port_range_max: 5911
           protocol: tcp
           remote_ip_prefix: 0.0.0.0/0
-        - direction: ingress
-          port_range_min: 8888
-          port_range_max: 8888
-          protocol: tcp
-          remote_ip_prefix: 0.0.0.0/0
-        - direction: ingress
-          port_range_min: 8888
-          port_range_max: 8888
-          protocol: udp
-          remote_ip_prefix: 0.0.0.0/0
 
   gateway-pri-port:
     type: OS::Neutron::Port
@@ -157,6 +147,7 @@ resources:
                   SHAREPUBKEY=true
                   AUTOPARSEMATCH=$clustername
                   PROFILE_ANSWERS='{ "cluster_type": "openflight-slurm-multinode", "cluster_name": "$clustername", "nfs_server": "gateway1", "slurm_server": "gateway1", "ipa_use": "true", "ipa_server": "infra01", "ipa_domain": "$clustername.alces.network" }'
+                  AUTOAPPLY="node: compute"
                 path: /opt/flight/cloudinit.in
                 permissions: '0600'
                 owner: root:root
@@ -188,9 +179,12 @@ resources:
                     sleep 5
                   done
                   /opt/flight/bin/flight profile apply infra01 ipa --wait
-                  /opt/flight/bin/flight profile apply gateway1 login 
-                  COMPUTE_NODES="$(/opt/flight/bin/flight hunter list --plain |awk '{print $5}' |grep '^node' |paste -s -d,)"
-                  /opt/flight/bin/flight profile apply $COMPUTE_NODES compute
+                  /opt/flight/bin/flight profile apply gateway1 login --wait
+                  # Ensure write access to user NFS mounts for cluster users
+                  chgrp cluster-users /opt/{apps,data}
+                  chmod 775 /opt/{apps,data}
+                  # Make Flight Silo use /opt/apps/
+                  pdsh -g all "sed -i 's,^software_dir:.*,software_dir: /opt/apps,g' /opt/flight/opt/silo/etc/config.yml"
                 path: /var/lib/firstrun/scripts/99-apply-identities.bash
                 permissions: '0600'
                 owner: root:root
@@ -311,7 +305,6 @@ resources:
             write_files:
               - content: |
                   SERVER=$gateway-pri-ip
-                  PREFIX=node
                 path: /opt/flight/cloudinit.in
                 permissions: '0600'
                 owner: root:root
@@ -363,7 +356,6 @@ resources:
             write_files:
               - content: |
                   SERVER=$gateway-pri-ip
-                  PREFIX=node
                 path: /opt/flight/cloudinit.in
                 permissions: '0600'
                 owner: root:root
@@ -415,7 +407,6 @@ resources:
             write_files:
               - content: |
                   SERVER=$gateway-pri-ip
-                  PREFIX=node
                 path: /opt/flight/cloudinit.in
                 permissions: '0600'
                 owner: root:root
@@ -467,7 +458,6 @@ resources:
             write_files:
               - content: |
                   SERVER=$gateway-pri-ip
-                  PREFIX=node
                 path: /opt/flight/cloudinit.in
                 permissions: '0600'
                 owner: root:root
@@ -519,7 +509,6 @@ resources:
             write_files:
               - content: |
                   SERVER=$gateway-pri-ip
-                  PREFIX=node
                 path: /opt/flight/cloudinit.in
                 permissions: '0600'
                 owner: root:root
