--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -212,6 +212,9 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
+      options:
+        custom_icons:
+          - custom_theme/.icons
   - pymdownx.snippets:
       auto_append:
         - includes/abbreviations.md
