--- a/docs/docs/flight-solo/admin-guides/alces-cloud/templates/generic-compute-large.yml
+++ b/docs/docs/flight-solo/admin-guides/alces-cloud/templates/generic-compute-large.yml
@@ -40,7 +40,7 @@ resources:
     type: OS::Nova::Server
     properties:
       name: { list_join: ['.', [ { list_join: [ '', ['node', {get_attr: [node-pad, value]} ]]}, { get_param: clustername }, 'alces.network']] }
-      flavor: p1.large
+      flavor: c1.large
       admin_user: flight
       networks:
           - port: { get_resource: node-pri-port }
